Updated TODO items

--- a/TODO
+++ b/TODO
@@ -7,20 +7,24 @@ DONE:
 * Get filename, linenumber from pdb
 * Convert file to texture
 * Load image into vpython
+* Load 1 card
+* Load 2 cards
+* Zoom from one file to next
+  - webos/iphone zoom-out->move-left|right->zoom-in
 
 TODO:
+* Track down CPU performance issue in vpython
+* Highlight line number
+* Navigation prev/next between cards
 * Create card - from text file - 8.5 x (no height limit)
 * Scroll up/down over large file
 * Hilight current line of execution 
 * Keep track of loaded cards 
-* Load 1 card
-* Load 2 cards
 * Center camera between 2 cards
-* Navigation prev/next between cards
 * Zoom from one file to next
   - triangle
   - parabola
   - parabola with gravity
 * Zoom to top file
 * Zoom to line number
-* Highlight line number
+* "blink card"
