--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+For more background, watching the overview video:
+"Project Detour - 3D Python Debugger" - http://www.youtube.com/watch?v=lZLzmNvRI1w
+
 Inspirations:
  - THE/archy
  - Palm WebOS
